[gd_scene load_steps=9 format=3 uid="uid://y8yydwgkhrks"]

[ext_resource type="PackedScene" uid="uid://c8el301bd0otd" path="res://GFX/Characters/Dingo.glb" id="1_qs5m5"]
[ext_resource type="Script" path="res://game_over_screen.gd" id="1_tyuto"]
[ext_resource type="Theme" uid="uid://cm7u8tucrkcqk" path="res://Themes/Menu_Theme.tres" id="2_05y6x"]
[ext_resource type="Theme" uid="uid://g83ropha44pl" path="res://Themes/GUI_Theme.tres" id="3_nqpwm"]
[ext_resource type="AudioStream" uid="uid://ch6tvd8meyvty" path="res://SFX/Effects/671008__mrangelgames__combined-jumpscare.ogg" id="5_gkmja"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_gjdu2"]
sky_top_color = Color(0.164706, 0.0392157, 0.0627451, 1)
sky_horizon_color = Color(0.541176, 0.509804, 0.515686, 1)
sky_energy_multiplier = 0.1
ground_bottom_color = Color(0, 0, 0, 1)
ground_horizon_color = Color(0.541176, 0.509804, 0.515686, 1)

[sub_resource type="Sky" id="Sky_ivqjn"]
sky_material = SubResource("ProceduralSkyMaterial_gjdu2")

[sub_resource type="Environment" id="Environment_y4h27"]
background_mode = 2
sky = SubResource("Sky_ivqjn")
ssao_enabled = true
volumetric_fog_enabled = true
volumetric_fog_density = 0.08
volumetric_fog_albedo = Color(0.176471, 0.0666667, 0.0666667, 1)

[node name="Game Over Screen" type="Node3D"]
script = ExtResource("1_tyuto")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0.401354, -0.303839, 0.864058, -0.298191, 0.848634, 0.436924, 0, 1.43639, 2.84136)
light_color = Color(0.831373, 0.211765, 0, 1)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_y4h27")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.989326, -0.14572, 0, 0.14572, 0.989326, 0, 0, 1.41358)

[node name="ContinueBox" type="VBoxContainer" parent="Camera3D"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_right = 138.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50
alignment = 1

[node name="LblContinue" type="Label" parent="Camera3D/ContinueBox"]
layout_mode = 2
theme = ExtResource("2_05y6x")
text = "Do you want to load the last
checkpoint?"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Camera3D/ContinueBox"]
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BtnLoadCheckpoint" type="Button" parent="Camera3D/ContinueBox/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nqpwm")
theme_override_font_sizes/font_size = 50
text = "Load Checkpoint"

[node name="BtnQuit" type="Button" parent="Camera3D/ContinueBox/HBoxContainer"]
layout_mode = 2
theme = ExtResource("3_nqpwm")
theme_override_font_sizes/font_size = 50
text = "Back to Menu"

[node name="Dingo" parent="." instance=ExtResource("1_qs5m5")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, -0.411918, 0.759)

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_gkmja")
autoplay = true

[connection signal="pressed" from="Camera3D/ContinueBox/HBoxContainer/BtnLoadCheckpoint" to="." method="_on_btn_load_checkpoint_pressed"]
[connection signal="pressed" from="Camera3D/ContinueBox/HBoxContainer/BtnQuit" to="." method="_on_btn_quit_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
